--- a/package.json
+++ b/package.json
@@ -9,21 +9,21 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@google/generative-ai": "^0.17.1",
-    "@types/react-speech-recognition": "^3.9.5",
-    "face-api.js": "^0.22.2",
-    "next": "14.2.6",
-    "react": "^18",
-    "react-dom": "^18",
-    "react-speech-recognition": "^3.10.0",
-    "react-speech-text": "^1.0.2"
+    "@google/generative-ai": "0.19.0",
+    "@types/react-speech-recognition": "3.9.5",
+    "face-api.js": "0.22.2",
+    "next": "14.2.12",
+    "react": "18",
+    "react-dom": "18",
+    "react-speech-recognition": "3.10.0",
+    "react-speech-text": "1.0.2"
   },
   "devDependencies": {
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
-    "typescript": "^5"
+    "@types/node": "22",
+    "@types/react": "18",
+    "@types/react-dom": "18",
+    "postcss": "8",
+    "tailwindcss": "3.4.12",
+    "typescript": "5"
   }
 }
